# NueralRetail

./: .env.example  .gitignore  Makefile  NeuralRetail_ClaudeCode_BuildPrompt.md  README.md  build_notebooks.py  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
dags/: neuralretail_pipeline.py
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.mlflow  docker-compose.yml
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_forecasting.ipynb  04_churn_model.ipynb  05_segmentation_inventory.ipynb  README.md
report/model_cards/: churn_classifier.md  customer_segmenter.md  demand_forecaster.md  inventory_recommender.md
reports/: phase4_5_report.md  phase6_dashboard.md  phase7_8_report.md
scripts/: build_project_pdf.py  debug_kmeans.py  debug_prophet.py  inspect_curve.py  inspect_rfm.py  probe.py
src/neuralretail/: __init__.py  cli.py  config.py
src/neuralretail/api/: main.py  schemas.py
src/neuralretail/dashboard/: app.py  components.py  data.py  theme.py
src/neuralretail/dashboard/pages/: 1_executive_overview.py  2_sales_analytics.py  3_customer_hub.py  4_demand_explorer.py  5_inventory_health.py
src/neuralretail/data/: __init__.py  clean.py  ingest.py
src/neuralretail/features/: __init__.py  rfm.py  timeseries.py
src/neuralretail/models/: __init__.py  _mlflow_utils.py  churn.py  forecasting.py  inventory.py  segmentation.py
src/neuralretail/monitoring/: __init__.py  drift.py
tests/: __init__.py  test_api.py  test_churn.py  test_clean.py  test_cli_exit_code.py  test_dashboard.py  test_drift.py  test_inventory.py  test_rfm.py  test_segmentation.py  test_synthetic_generator.py
