[project]
name = "neuralretail"
version = "0.1.0"
description = "AI-powered retail sales intelligence platform for Amdox Technologies"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Amdox Technologies" },
]
license = { text = "MIT" }

dependencies = [
    # Data
    # NOTE: numpy is capped at <2.5 because shap 0.52.x transitively requires
    # numba<0.55, and numba 0.53.x's llvmlite pin rejects numpy 2.5+.
    "pandas>=2.2",
    "numpy>=1.26,<2.5",
    "pyarrow>=15.0",
    "openpyxl>=3.1",
    # Data quality
    "great-expectations>=0.18.17",
    # ML
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "prophet>=1.1.5",
    "shap>=0.44",
    # Tracking
    "mlflow>=2.12",
    # API
    "fastapi>=0.110",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "uvicorn[standard]>=0.27",
    # Dashboard
    "streamlit>=1.32",
    "plotly>=5.18",
    # Monitoring
    "evidently>=0.4",
    # Config
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[project.scripts]
neuralretail = "neuralretail.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neuralretail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests follow numpy/sklearn convention (X = feature matrix) and use
# short test fixture helpers; relax the naming rules there.
"tests/**/*.py" = ["N802", "N806"]
# Model modules use the scikit-learn convention (X = feature matrix,
# X_train / X_test) and the prophet convention (X = future DataFrame).
# The naming is part of the public surface; lowercasing would diverge
# from the surrounding framework docs.
"src/neuralretail/models/**/*.py" = ["N803", "N806"]
"src/neuralretail/api/main.py" = ["N803", "N806"]
